Added banner image (v1.2)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </menu>
         </nav>
     </header>
+    <figure class="banner">
+        <img src="https://via.placeholder.com/700x200" />      
+        <!-- C/O https://placeholder.com/ -->
+    </figure>
     
 </body>
 </html>
