Added main sections and footer (v1.3)

--- a/index.html
+++ b/index.html
@@ -12,16 +12,37 @@
         <h1>Max McDonough</h1>
         <nav>
             <menu>
-                <li>About me</li>
-                <li>Work</li>
-                <li>Contact</li>
+                <li>
+                    <a href="#about">About me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
             </menu>
         </nav>
     </header>
     <figure class="banner">
-        <img src="https://via.placeholder.com/700x200" />      
+        <img src="https://via.placeholder.com/700x200" alt="placeholder image" />      
         <!-- C/O https://placeholder.com/ -->
     </figure>
-    
+    <main>
+        <section id="about">
+
+
+        </section>
+        <section id="work">
+
+        </section>
+        <section id="contact">
+
+        </section>
+    </main>
+    <footer>
+        <h3>&copy; 2022 Max McDonough</h3>
+    </footer>
+     
 </body>
 </html>
