Added structure and flex to main sections (v1.4)

--- a/index.html
+++ b/index.html
@@ -30,19 +30,32 @@
     </figure>
     <main>
         <section id="about">
-
-
+            <div class="section-header">
+                <h2>About me</h2>
+            </div>
+            <div class="section-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra justo nec ultrices dui sapien eget mi. Arcu non odio euismod lacinia at quis risus sed vulputate. Pharetra pharetra massa massa ultricies mi. Urna porttitor rhoncus dolor purus non enim. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Amet dictum sit amet justo. Ante metus dictum at tempor commodo ullamcorper a. Eu sem integer vitae justo eget magna fermentum iaculis. Nisi porta lorem mollis aliquam ut porttitor leo. Quis enim lobortis scelerisque fermentum dui. Volutpat ac tincidunt vitae semper quis lectus nulla. Ut morbi tincidunt augue interdum velit euismod in.</p>
+            </div>
         </section>
         <section id="work">
-
+            <div class="section-header">
+                <h2>My Work</h2>
+            </div>
+            <div class="section-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra justo nec ultrices dui sapien eget mi. Arcu non odio euismod lacinia at quis risus sed vulputate. Pharetra pharetra massa massa ultricies mi. Urna porttitor rhoncus dolor purus non enim. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Amet dictum sit amet justo. Ante metus dictum at tempor commodo ullamcorper a. Eu sem integer vitae justo eget magna fermentum iaculis. Nisi porta lorem mollis aliquam ut porttitor leo. Quis enim lobortis scelerisque fermentum dui. Volutpat ac tincidunt vitae semper quis lectus nulla. Ut morbi tincidunt augue interdum velit euismod in.</p>
+            </div>
         </section>
         <section id="contact">
-
+            <div class="section-header">
+                <h2>Contact Me</h2>
+            </div>
+            <div class="section-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra justo nec ultrices dui sapien eget mi. Arcu non odio euismod lacinia at quis risus sed vulputate. Pharetra pharetra massa massa ultricies mi. Urna porttitor rhoncus dolor purus non enim. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Amet dictum sit amet justo. Ante metus dictum at tempor commodo ullamcorper a. Eu sem integer vitae justo eget magna fermentum iaculis. Nisi porta lorem mollis aliquam ut porttitor leo. Quis enim lobortis scelerisque fermentum dui. Volutpat ac tincidunt vitae semper quis lectus nulla. Ut morbi tincidunt augue interdum velit euismod in.</p>
+            </div>
         </section>
     </main>
     <footer>
         <h3>&copy; 2022 Max McDonough</h3>
     </footer>
-     
 </body>
 </html>
