Added contact, fixed flex bugs (v1.7)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section id="about">
             <div class="section-header">
-                <h2>About me</h2>
+                <h2>About Me</h2>
             </div>
             <div class="section-divider">
             </div>
@@ -74,8 +74,10 @@
             </div>
             <div class="section-divider">
             </div>
-            <div class="section-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra justo nec ultrices dui sapien eget mi. Arcu non odio euismod lacinia at quis risus sed vulputate. Pharetra pharetra massa massa ultricies mi. Urna porttitor rhoncus dolor purus non enim. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Amet dictum sit amet justo. Ante metus dictum at tempor commodo ullamcorper a. Eu sem integer vitae justo eget magna fermentum iaculis. Nisi porta lorem mollis aliquam ut porttitor leo. Quis enim lobortis scelerisque fermentum dui. Volutpat ac tincidunt vitae semper quis lectus nulla. Ut morbi tincidunt augue interdum velit euismod in.</p>
+            <div class="section-content" id="contact-content">
+                <h3>404.229.6441</h3>
+                <h3>max.mcdonough@gmail.com</h3>
+                <h3><a href="https://github.com/MMMPhoto" target="_blank">Github</a></h3>
             </div>
         </section>
     </main>
