--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <menu>
                 <li>
-                    <a href="#about">About me</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
                     <a href="#work">Work</a>
