Added some photos and wrote bio (v2.0)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Max McDonough's Portfolio</title>
 </head>
+
 <body>
+    <!-- Page Header -->
     <header>
         <h1>Max McDonough</h1>
+        <!-- Nav Bar -->
         <nav>
             <menu>
                 <li>
@@ -24,11 +27,12 @@
             </menu>
         </nav>
     </header>
+    <!-- Banner Image -->
     <figure class="banner">
-        <!-- C/O https://placeholder.com/ -->
-        <img src="https://via.placeholder.com/700x200" alt="placeholder image" />
+        <img src="./assets/photos/sunrise-long-exposure.jpg" alt="Long exposure photograph of a sunrise over Lake Winnipesaukee, NH." />
     </figure>
     <main>
+        <!-- About Section -->
         <section id="about">
             <div class="section-header">
                 <h2>About Me</h2>
@@ -37,12 +41,16 @@
             </div>
             <div class="section-content" id="about-content">
                 <figure id="avatar">
-                    <!-- C/O https://placeholder.com/ -->
-                    <img src="https://via.placeholder.com/150x150" alt="placeholder image" />
+                    <img src="assets/photos/san-juan-max.jpg" alt="Max McDonough on vacation in San Juan, Puerto Rico." />
                </figure>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra justo nec ultrices dui sapien eget mi. Arcu non odio euismod lacinia at quis risus sed vulputate. Pharetra pharetra massa massa ultricies mi. Urna porttitor rhoncus dolor purus non enim. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi. Amet dictum sit amet justo. Ante metus dictum at tempor commodo ullamcorper a. Eu sem integer vitae justo eget magna fermentum iaculis. Nisi porta lorem mollis aliquam ut porttitor leo. Quis enim lobortis scelerisque fermentum dui. Volutpat ac tincidunt vitae semper quis lectus nulla. Ut morbi tincidunt augue interdum velit euismod in.</p>
+               <article>
+                <p>After graduating with a BA in Film and Video Production from Georgia State University in 2004, I spent over 16 years working as a freelancer in the Movie and TV industry in Atlanta. I worked in a variety of differnet crew postions on many differnet types of productions. For the last 8 years I have worked primarily as a Camera Operator on non-scripted television shows.</p>
+                <p>During that time I added work as a stills Photographer, focusing on long exposure landscape photography. In 2017, I obtained my FAA remote pilot's license and began work in Drone Photography and Videography.</p>
+                <p>Following a long work hiatus at the start of the covid-19 pandemic, I craved a career change. Deciding to focus in Web Development, I completed self-guided, online courses in HTML and CSS. After deciding I needed a more structured learning environment, I enrolled in Georgia Tech's part time Full Stack Development Bootcamp in the spring of 2022.</p>
+               </article>
             </div>
         </section>
+        <!-- Work Section -->
         <section id="work">
             <div class="section-header">
                 <h2>My Work</h2>
@@ -50,6 +58,7 @@
             <div class="section-divider">
             </div>
             <div class="section-content" id="work-content">
+                <!-- Lead Work Link, Appears Bigger -->
                 <figure class="work-link" id="lead-work-link">
                     <!-- C/O https://placeholder.com/ -->
                     <img src="https://via.placeholder.com/700x200" alt="placeholder image" />
@@ -58,6 +67,7 @@
                         <p>Subheading</p>
                     </div>
                 </figure>
+                <!-- Secondary Work Links -->
                 <figure class="work-link">
                     <!-- C/O https://placeholder.com/ -->
                     <img src="https://via.placeholder.com/400x200" alt="placeholder image" />
@@ -92,6 +102,7 @@
                 </figure>
             </div>
         </section>
+        <!-- Contact Section -->
         <section id="contact">
             <div class="section-header">
                 <h2>Contact Me</h2>
@@ -105,6 +116,7 @@
             </div>
         </section>
     </main>
+    <!-- Footer -->
     <footer>
         <h3>&copy; 2022 Max McDonough</h3>
     </footer>
