--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </figure>
     <main>
         <!-- About Section -->
-        <section id="about">
+        <section>
             <div class="section-header">
                 <h2>About Me</h2>
             </div>
@@ -51,7 +51,7 @@
             </div>
         </section>
         <!-- Work Section -->
-        <section id="work">
+        <section>
             <div class="section-header">
                 <h2>My Work</h2>
             </div>
@@ -60,11 +60,12 @@
             <div class="section-content" id="work-content">
                 <!-- Lead Work Link, Appears Bigger -->
                 <figure class="work-link" id="lead-work-link">
-                    <!-- C/O https://placeholder.com/ -->
-                    <img src="https://via.placeholder.com/700x200" alt="placeholder image" />
+                    <a href="#">
+                        <img src="/assets/photos/portfolio-site-screenshot.png" alt="Screenshot of this portfolio site" />
+                    </a>
                     <div class="work-title">
-                        <h3>Work Title</h3>
-                        <p>Subheading</p>
+                        <h3>This Portfolio Site</h3>
+                        <p>HTML, CSS</p>
                     </div>
                 </figure>
                 <!-- Secondary Work Links -->
@@ -103,7 +104,7 @@
             </div>
         </section>
         <!-- Contact Section -->
-        <section id="contact">
+        <section>
             <div class="section-header">
                 <h2>Contact Me</h2>
             </div>
