Added extra work screenshots and fixed deployed work links (v2.2)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                </figure>
                <article>
                 <p>After graduating with a BA in Film and Video Production from Georgia State University in 2004, I spent over 16 years working as a freelancer in the Movie and TV industry in Atlanta. I worked in a variety of differnet crew postions on many differnet types of productions. For the last 8 years I have worked primarily as a Camera Operator on non-scripted television shows.</p>
-                <p>During that time I added work as a stills Photographer, focusing on long exposure landscape photography. In 2017, I obtained my FAA remote pilot's license and began work in Drone Photography and Videography.</p>
+                <p>During that time I added work as a Stills Photographer, focusing on long exposure landscape photography. In 2017, I obtained my FAA remote pilot's license and began work in Drone Photography and Videography.</p>
                 <p>Following a long work hiatus at the start of the covid-19 pandemic, I craved a career change. Deciding to focus in Web Development, I completed self-guided, online courses in HTML and CSS. After deciding I needed a more structured learning environment, I enrolled in Georgia Tech's part time Full Stack Development Bootcamp in the spring of 2022.</p>
                </article>
             </div>
@@ -60,8 +60,8 @@
             <div class="section-content" id="work-content">
                 <!-- Lead Work Link, Appears Bigger -->
                 <figure class="work-link" id="lead-work-link">
-                    <a href="#">
-                        <img src="/assets/photos/portfolio-site-screenshot.png" alt="Screenshot of this portfolio site" />
+                    <a href="https://mmmphoto.github.io/Module_2_Challenge_Portfolio/" target="_blank">
+                        <img src="/assets/photos/portfolio-site-screenshot.png" alt="Image of this portfolio site" />
                     </a>
                     <div class="work-title">
                         <h3>This Portfolio Site</h3>
@@ -70,7 +70,26 @@
                 </figure>
                 <!-- Secondary Work Links -->
                 <figure class="work-link">
-                    <!-- C/O https://placeholder.com/ -->
+                    <a href="https://mmmphoto.github.io/Module_1_Challenge/" target="_blank">
+                        <img class="work-image" src="/assets/photos/module-1-screenshot.png" alt="Image of the refactoring challenge for Module 1 of the Gerogia Tech Bootcamp" />
+                    </a>
+                    <div class="work-title">
+                        <h3>Code Refactoring Project</h3>
+                        <p>HTML, CSS</p>
+                    </div>
+                </figure>
+                <figure class="work-link">
+                    <a href="https://mmmphoto.github.io/Mod_2_28-Stu_Mini_Project/" target="_blank">
+                        <img src="./assets/photos/css-snippet-screenshot.png" alt="Image of the 'CSS Snippet' Mini-Project for Module 2 of the Georgia Tech Bootcamp" />
+                    </a>
+                    <div class="work-title">
+                        <h3>CSS Snippet Cheatsheet</h3>
+                        <p>HTML, CSS</p>
+                    </div>
+                </figure>
+                <!-- Template for Future Work Links Commented Out Below -->
+                <!--
+                <figure class="work-link">
                     <img src="https://via.placeholder.com/400x200" alt="placeholder image" />
                     <div class="work-title">
                         <h3>Work Title</h3>
@@ -78,33 +97,16 @@
                     </div>
                 </figure>
                 <figure class="work-link">
-                    <!-- C/O https://placeholder.com/ -->
                     <img src="https://via.placeholder.com/400x200" alt="placeholder image" />
                     <div class="work-title">
                         <h3>Work Title</h3>
                         <p>Subheading</p>
                     </div>
-                </figure>
-                <figure class="work-link">
-                    <!-- C/O https://placeholder.com/ -->
-                    <img src="https://via.placeholder.com/400x200" alt="placeholder image" />
-                    <div class="work-title">
-                        <h3>Work Title</h3>
-                        <p>Subheading</p>
-                    </div>
-                </figure>
-                <figure class="work-link">
-                    <!-- C/O https://placeholder.com/ -->
-                    <img src="https://via.placeholder.com/400x200" alt="placeholder image" />
-                    <div class="work-title">
-                        <h3>Work Title</h3>
-                        <p>Subheading</p>
-                    </div>
-                </figure>
+                </figure> -->
             </div>
         </section>
         <!-- Contact Section -->
-        <section>
+        <section id="contact-section">
             <div class="section-header">
                 <h2>Contact Me</h2>
             </div>
