Added CSS comments (v2.3)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <!-- Banner Image -->
     <figure class="banner">
-        <img src="./assets/photos/sunrise-long-exposure.jpg" alt="Long exposure photograph of a sunrise over Lake Winnipesaukee, NH." />
+        <img src="./assets/photos/sunrise-long-exposure.jpg" alt="Long exposure photograph of a sunrise over Lake Winnipesaukee, NH. Photographed and owned by Max McDonough" />
     </figure>
     <main>
         <!-- About Section -->
