--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!-- Lead Work Link, Appears Bigger -->
                 <figure class="work-link" id="lead-work-link">
                     <a href="https://mmmphoto.github.io/Module_2_Challenge_Portfolio/" target="_blank">
-                        <img src="/assets/photos/portfolio-site-screenshot.png" alt="Image of this portfolio site" />
+                        <img src="./assets/photos/portfolio-site-screenshot.png" alt="Image of this portfolio site" />
                     </a>
                     <div class="work-title">
                         <h3>This Portfolio Site</h3>
