--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <!-- Secondary Work Links -->
                 <figure class="work-link">
                     <a href="https://mmmphoto.github.io/Module_1_Challenge/" target="_blank">
-                        <img class="work-image" src="/assets/photos/module-1-screenshot.png" alt="Image of the refactoring challenge for Module 1 of the Gerogia Tech Bootcamp" />
+                        <img class="work-image" src="./assets/photos/module-1-screenshot.png" alt="Image of the refactoring challenge for Module 1 of the Gerogia Tech Bootcamp" />
                     </a>
                     <div class="work-title">
                         <h3>Code Refactoring Project</h3>
