--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="section-content" id="about-content">
                 <figure id="avatar">
-                    <img src="assets/photos/san-juan-max.jpg" alt="Max McDonough on vacation in San Juan, Puerto Rico." />
+                    <img src="./assets/photos/san-juan-max.jpg" alt="Max McDonough on vacation in San Juan, Puerto Rico." />
                </figure>
                <article>
                 <p>After graduating with a BA in Film and Video Production from Georgia State University in 2004, I spent over 16 years working as a freelancer in the Movie and TV industry in Atlanta. I worked in a variety of differnet crew postions on many differnet types of productions. For the last 8 years I have worked primarily as a Camera Operator on non-scripted television shows.</p>
