Cleaned up style formatting and media screens (v2.7)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </section>
         <!-- Work Section -->
-        <section>
+        <section id="work-section">
             <div class="section-header">
                 <h2>My Work</h2>
             </div>
