updated site with event finder and weather app

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="section-divider">
             </div>
-            <div class="section-content" id="about-content">
+            <div class="section-content" id="about">
                 <figure id="avatar">
                     <img src="./assets/photos/san-juan-max.jpg" alt="Max McDonough on vacation in San Juan, Puerto Rico." />
                </figure>
@@ -57,18 +57,36 @@
             </div>
             <div class="section-divider">
             </div>
-            <div class="section-content" id="work-content">
+            <div class="section-content" id="work">
                 <!-- Lead Work Link, Appears Bigger -->
                 <figure class="work-link" id="lead-work-link">
+                    <a href="https://mmmphoto.github.io/Event-Finder/" target="_blank">
+                        <img src="./assets/photos/Event-finder-screenshot.png" alt="Image of the 'Event Finder', the first group project for the Georia Tech Bootcamp" />
+                    </a>
+                    <div class="work-title">
+                        <h3>Event Finder</h3>
+                        <p>Javascript, API calls, CSS, HTML</p>
+                    </div>
+                </figure>
+                <!-- Secondary Work Links -->
+                <figure class="work-link">
+                    <a href="https://mmmphoto.github.io/Weather-App/" target="_blank">
+                        <img class="work-image" src="./assets/photos/weather-dashboard-screenshot.png" alt="Image of the Weather App for the week 6 challenge of the Georgia Tech Bootcamp" />
+                    </a>
+                    <div class="work-title">
+                        <h3>Weather App</h3>
+                        <p>Javascript, API calls, CSS, HTML</p>
+                    </div>
+                </figure>
+                <figure class="work-link">
                     <a href="https://mmmphoto.github.io/Module_2_Challenge_Portfolio/" target="_blank">
-                        <img src="./assets/photos/portfolio-site-screenshot.png" alt="Image of this portfolio site" />
+                        <img class="work-image" src="./assets/photos/portfolio-site-screenshot.png" alt="Image of this portfolio site" />
                     </a>
                     <div class="work-title">
                         <h3>This Portfolio Site</h3>
                         <p>HTML, CSS</p>
                     </div>
                 </figure>
-                <!-- Secondary Work Links -->
                 <figure class="work-link">
                     <a href="https://mmmphoto.github.io/Module_1_Challenge/" target="_blank">
                         <img class="work-image" src="./assets/photos/module-1-screenshot.png" alt="Image of the refactoring challenge for Module 1 of the Gerogia Tech Bootcamp" />
@@ -106,7 +124,7 @@
             </div>
         </section>
         <!-- Contact Section -->
-        <section id="contact-section">
+        <section id="contact">
             <div class="section-header">
                 <h2>Contact Me</h2>
             </div>
