--- a/index.html
+++ b/index.html
@@ -60,15 +60,24 @@
             <div class="section-content" id="work">
                 <!-- Lead Work Link, Appears Bigger -->
                 <figure class="work-link" id="lead-work-link">
+                    <a href="https://adoptme5.herokuapp.com/" target="_blank">
+                        <img src="./assets/photos/Adopt-me-screenshot.png" alt="Image of 'Adopt Me', the pet adoption search website." />
+                    </a>
+                    <div class="work-title">
+                        <h3>Adopt Me</h3>
+                        <p>Node.js, Express, Sequelize, Javascript</p>
+                    </div>
+                </figure>
+                <!-- Secondary Work Links -->
+                <figure class="work-link">
                     <a href="https://mmmphoto.github.io/Event-Finder/" target="_blank">
-                        <img src="./assets/photos/Event-finder-screenshot.png" alt="Image of the 'Event Finder', the first group project for the Georia Tech Bootcamp" />
+                        <img class="work-image" src="./assets/photos/Event-finder-screenshot.png" alt="Image of the 'Event Finder', the first group project for the Georia Tech Bootcamp" />
                     </a>
                     <div class="work-title">
                         <h3>Event Finder</h3>
                         <p>Javascript, API calls, CSS, HTML</p>
                     </div>
                 </figure>
-                <!-- Secondary Work Links -->
                 <figure class="work-link">
                     <a href="https://mmmphoto.github.io/Weather-App/" target="_blank">
                         <img class="work-image" src="./assets/photos/weather-dashboard-screenshot.png" alt="Image of the Weather App for the week 6 challenge of the Georgia Tech Bootcamp" />
@@ -93,15 +102,6 @@
                     </a>
                     <div class="work-title">
                         <h3>Code Refactoring Project</h3>
-                        <p>HTML, CSS</p>
-                    </div>
-                </figure>
-                <figure class="work-link">
-                    <a href="https://mmmphoto.github.io/Mod_2_28-Stu_Mini_Project/" target="_blank">
-                        <img src="./assets/photos/css-snippet-screenshot.png" alt="Image of the 'CSS Snippet' Mini-Project for Module 2 of the Georgia Tech Bootcamp" />
-                    </a>
-                    <div class="work-title">
-                        <h3>CSS Snippet Cheatsheet</h3>
                         <p>HTML, CSS</p>
                     </div>
                 </figure>
